RESOLVED FIXED165806
REGRESSION(r204163): Web Inspector: Page crashes when Inspector tries to load insecure SourceMap
https://bugs.webkit.org/show_bug.cgi?id=165806
Summary REGRESSION(r204163): Web Inspector: Page crashes when Inspector tries to load...
Joseph Pecoraro
Reported 2016-12-13 10:25:43 PST
Summary: Page crashes when Inspector tries to load insecure SourceMap DocumentThreadableLoader now informs the ThreadableLoaderClient when it fails to create a CachedResource. That didn't happen before, so now the Inspector's internal loader is triggering its internal failure process twice, which produces problems. Steps to Reproduce: 1. Inspect wealthfront.com => Crash Notes: - Should we load insecure SourceMap resource for Web Inspector? - If Yes. We would have to avoid caching it to make sure the page never uses the result. - If No. Just block the load as expected. - Either way, the Inspector code should be updated to avoid the crash now that DocumentThreadableLoader handles the case it was concerned about.
Attachments
[PATCH] Proposed Fix (8.52 KB, patch)
2016-12-13 13:29 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-12-13 10:25:51 PST
Joseph Pecoraro
Comment 2 2016-12-13 13:29:24 PST
Created attachment 297038 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2016-12-13 16:20:46 PST
Comment on attachment 297038 [details] [PATCH] Proposed Fix Clearing flags on attachment: 297038 Committed r209784: <http://trac.webkit.org/changeset/209784>
WebKit Commit Bot
Comment 4 2016-12-13 16:20:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.