REGRESSION(r204163): Web Inspector: Page crashes when Inspector tries to load insecure SourceMap https://bugs.webkit.org/show_bug.cgi?id=165806 <rdar://problem/28169025>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-12-13
Reviewed by Alex Christensen.

Source/WebCore:

Test: http/tests/inspector/network/loadResource-insecure-resource.html

* inspector/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::loadResource):
DocumentThreadableLoader now triggers the ThreadableLoaderClient's didFail
callback, so this didFailLoaderCreation is now redundent and incorrect.

LayoutTests:

* http/tests/inspector/network/loadResource-insecure-resource-expected.txt: Added.
* http/tests/inspector/network/loadResource-insecure-resource.html: Added.
* http/tests/inspector/network/resource-timing.html:
* http/tests/inspector/resources/inspector-test.js:
(runTestHTTPS):

Canonical link: https://commits.webkit.org/183430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209784 268f45cc-cd09-0410-ab3c-d52691b4dbfc